--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ requires-python = ">=3.12"
 dependencies = [
     "pandas (>=2.3.3,<3.0.0)",
     "numpy (>=2.3.3,<3.0.0)",
-    "scikit-learn (>=1.7.2,<2.0.0)"
+    "scikit-learn (>=1.7.2,<2.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "networkx (>=3.5,<4.0)",
+    "statsmodels (>=0.14.5,<0.15.0)"
 ]
 
 [tool.poetry]
